feat: add gyro robot